--- a/spectra-frontend/package.json
+++ b/spectra-frontend/package.json
@@ -47,12 +47,12 @@
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "prettier": "3.5.3",
+    "sass": "^1.89.2",
     "start-server-and-test": "^2.0.11",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
-    "vue-tsc": "^2.2.8",
-    "sass": "^1.72.0"
+    "vue-tsc": "^2.2.8"
   }
 }
