Added custom mixins and integrated bulma into vite.config.ts
- Removed unused SCSS files and CSS files to clean up the codebase.
- Consolidated theme styles into a new SCSS structure, including color variants and custom mixins.
- Updated the App.vue component to remove unnecessary imports.
- Reorganized the layout of the device components, introducing ControlRack, TopRack, and BottomRack for better structure.
- Enhanced the ModeSelector and ModesLink components for improved functionality and styling.
- Updated router configuration for modes to reflect new icons and improve clarity.
- Implemented a new transition mixin for consistent animations across components.
- Adjusted the WaterfallScreen to display the correct icon based on the current mode.

--- a/spectra-frontend/package.json
+++ b/spectra-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spectra-frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -17,7 +17,7 @@
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
-    "build:css": "sass --load-path=node_modules spectra-theme.scss public/css/spectra.css",
+    "build:css": "sass --load-path=node_modules src/assets/scss/spectra-theme.scss public/css/spectra.css",
     "watch:css": "npm run build-bulma -- --watch"
   },
   "dependencies": {
