--- a/spectra-frontend/package.json
+++ b/spectra-frontend/package.json
@@ -18,7 +18,8 @@
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "build:css": "sass --load-path=node_modules src/assets/scss/spectra-theme.scss public/css/spectra.css",
-    "watch:css": "npm run build-bulma -- --watch"
+    "watch:css": "npm run build-bulma -- --watch",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vueuse/core": "^13.4.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-cypress": "^4.2.0",
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
+    "gh-pages": "^6.3.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
