--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "spectra",
     "private": true,
     "scripts": {
+        "build": "npm run build:frontend",
         "build:frontend": "cd spectra-frontend && npm run build"
     }
 }
