--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "builds": [
         {
-            "src": "spectra-frontend/package.json",
+            "src": "package.json",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "dist"
+                "distDir": "spectra-frontend/dist"
             }
         }
     ],
